--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>QG Studio</title>
-    <link rel="shortcut icon" type="image/png" href="http://qgstudio.oss-cn-shenzhen.aliyuncs.com/images/icons/qglogo.png" />
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script> -->
+    <link rel="shortcut icon" type="image/png" href="https://qgstudio.oss-cn-shenzhen.aliyuncs.com/images/icons/qglogo.png" />
     <script>
       function resizeRem() {
         var whdef;
